provider evaluations form is done FINALLY

--- a/app/views/evaluations/show_student.html.erb
+++ b/app/views/evaluations/show_student.html.erb
@@ -1,30 +1,30 @@
-<h2>Hello, <%= @evaluation.student_name %></h2>
+<div class="container">
+  <h2>Hello, <%= @evaluation.student_name %></h2>
 
-<% if @evaluation.provider_id %>
+  <% if @evaluation.student_finished? %>
 
-  <h3>Looks like you've already submitted your evaluation request.  You entered the following info:</h3>
-  <ul>
-    <li>Student Type: <%= @evaluation.student_type %></li>
-    <li>Hostpital: <%= @evaluation.hospital %></li>
-    <li>Provider: <%= @evaluation.provider.name %></li>
-  </ul>
+    <h3>Looks like you've already submitted your evaluation request.  You entered the following info:</h3>
+    <ul>
+      <li>Student Type: <%= @evaluation.student_type %></li>
+      <li>Hostpital: <%= @evaluation.hospital %></li>
+      <li>Provider: <%= @evaluation.provider.name %></li>
+    </ul>
 
-<% else %>
+  <% else %>
 
-  <% # TODO: make this form pretty! maybe use formtastic or whatever it is that activeadmin already depends on %>
-  <h3>Please fill out the following form. The provider you select will be asked to fill out an evaluation of your performance.</h3>
+    <h3>Please fill out the following form. The provider you select will be asked to fill out an evaluation of your performance.</h3>
 
-  <%= semantic_form_for @evaluation, url: { action: 'student_submit' } do |f| %>
-    <%= f.inputs name: "Basic info for #{@evaluation.student_name}" do %>
-      <%= f.semantic_errors %>
-      <%= f.input :student_type, as: :radio, collection: @student_types %>
-      <%= f.input :hospital, as: :radio, collection: @hospitals %>
-      <%= f.input :provider, label: 'Provider (who you want to evaluate you)' %>
+    <%= semantic_form_for @evaluation, url: { action: 'student_submit' } do |f| %>
+      <%= f.inputs name: "Basic info for #{@evaluation.student_name}" do %>
+        <%= f.semantic_errors %>
+        <%= f.input :student_type, as: :radio, collection: @student_types %>
+        <%= f.input :hospital, as: :radio, collection: @hospitals %>
+        <%= f.input :provider, hint: 'this person will evaluate you' %>
+      <% end %>
+      <%= f.actions do %>
+        <%= f.action :submit, label: 'Submit' %>
+      <% end %>
     <% end %>
-    <%= f.actions do %>
-      <%= f.action :submit, label: 'Submit' %>
-    <% end %>
+
   <% end %>
-
-<% end %>
-
+</div>
