--- a/app/assets/stylesheets/evaluations.css.scss
+++ b/app/assets/stylesheets/evaluations.css.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the evaluations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding: 40px;
+
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
+
+table.evaluation {
+  th {
+    background-color: initial;
+    text-align: center;
+  }
+
+  td {
+    .title {
+      font-weight: bold;
+    }
+
+    .desc {
+      font-style: italic;
+    }
+
+    .error {
+      color: red;
+      float: right;
+    }
+  }
+
+  td.option {
+    font-size: smaller;
+    line-height: normal;
+    text-align: center;
+  }
+
+  tbody tr:nth-child(odd) {
+    background-color: #F9F9F9;
+  }
+
+  input[type="radio"] {
+    margin: 10px 0 3px 0;
+  }
+}
+
+.table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
+  border: 1px solid #ddd;
+}
+
+.comments {
+  margin-bottom: 20px;
+
+  label {
+    font-weight: bold;
+  }
+
+  textarea {
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
