add comments, and add "thanks for submitting" pages

--- a/app/views/evaluations/show_provider.html.erb
+++ b/app/views/evaluations/show_provider.html.erb
@@ -1,49 +1,68 @@
 <div class="container">
   <h2>Hello, <%= @evaluation.provider.name %></h2>
 
-  <h3>Please fill out the following evaluation for <b><%= @evaluation.student_name %></b></h3>
+  <% if @evaluation.evaluator_finished? %>
 
-  <%= form_for @evaluation, url: { action: 'provider_submit' } do |f| %>
-
-    <% @rubric.metric_types.each do |metric_type| %>
-      <table class="evaluation table-bordered">
-        <thead>
-          <tr>
-            <th></th>
-            <% Rubric.options_for_metric_type(metric_type).each do |opt| %>
-              <th><%= opt[:desc] %></th>
-            <% end %>
-          </tr>
-        </thead>
-        <tbody>
-
-        <% @rubric.metrics_of_type(metric_type).each do |metric| %>
-          <tr>
-            <td>
-              <div class="title"><%= metric.title %></div>
-              <div class="desc"><%= metric.description %></div>
-              <div class="error"><%= metric.error %></div>
-            </td>
-            <% metric.options.each do |opt| %>
-              <td class="option">
-                <label><input type="radio" <%= 'checked="checked"' if metric.grade == opt[:value] %>
-                        name="rubric[<%= metric.identifier.to_s %>]" value="<%= opt[:value] %>"/><br><%= opt[:desc] %></label>
-              </td>
-            <% end %>
-          </tr>
-        <% end %>
-
-        </tbody>
-      </table>
+    <% if @just_submitted %>
+      <h3>Thanks. Your responses for <b><%= @evaluation.student_name %></b>:</h3>
+    <% else %>
+      <h3>Looks like you've already submitted your evaluation of <b><%= @evaluation.student_name %></b></h3>
     <% end %>
 
-    <div class="comments">
-      <%= label_tag(:provider_comments, "Additional Comments:") %>
-      <br>
-      <%= text_area_tag(:provider_comments, "", rows: 6) %>
-      <br>
-    </div>
+    <ul>
+      <% @rubric.metrics.each do |metric| %>
+        <li><%= metric.title %> -- <b><%= metric.grade %></b></li>
+      <% end %>
+      <li>Comments: <b><%= @evaluation.comments || "[None]" %></b></li>
+    </ul>
 
-    <%= f.submit "Submit Evaluation" %>
+  <% else %>
+
+    <h3>Please fill out the following evaluation for <b><%= @evaluation.student_name %></b></h3>
+
+    <%= form_for @evaluation, url: { action: 'provider_submit' } do |f| %>
+
+      <% @rubric.metric_types.each do |metric_type| %>
+        <table class="evaluation table-bordered">
+          <thead>
+            <tr>
+              <th></th>
+              <% Rubric.options_for_metric_type(metric_type).each do |opt| %>
+                <th><%= opt[:desc] %></th>
+              <% end %>
+            </tr>
+          </thead>
+          <tbody>
+
+          <% @rubric.metrics_of_type(metric_type).each do |metric| %>
+            <tr>
+              <td>
+                <div class="title"><%= metric.title %></div>
+                <div class="desc"><%= metric.description %></div>
+                <div class="error"><%= metric.error %></div>
+              </td>
+              <% metric.options.each do |opt| %>
+                <td class="option">
+                  <label><input type="radio" <%= 'checked="checked"' if metric.grade == opt[:value] %>
+                          name="rubric[<%= metric.identifier.to_s %>]" value="<%= opt[:value] %>"/><br><%= opt[:desc] %></label>
+                </td>
+              <% end %>
+            </tr>
+          <% end %>
+
+          </tbody>
+        </table>
+      <% end %>
+
+      <div class="comments">
+        <%= label(:comments, "Additional Comments:") %>
+        <br>
+        <%= f.text_area(:comments, rows: 6) %>
+        <br>
+      </div>
+
+      <%= f.submit "Submit Evaluation" %>
+    <% end %>
+
   <% end %>
 </div>
