changed page titles

--- a/app/views/evaluations/show_student.html.erb
+++ b/app/views/evaluations/show_student.html.erb
@@ -10,9 +10,9 @@
     <% end %>
 
     <ul>
-      <li>Student Type: <%= @evaluation.student_type %></li>
-      <li>Hostpital: <%= @evaluation.hospital %></li>
-      <li>Provider: <%= @evaluation.provider.name %></li>
+      <li>Student Type: <b><%= @evaluation.student_type %></b></li>
+      <li>Hostpital: <b><%= @evaluation.hospital %></b></li>
+      <li>Provider: <b><%= @evaluation.provider.name %></b></li>
     </ul>
 
   <% else %>
