--- a/app/views/evaluations/show_provider.html.erb
+++ b/app/views/evaluations/show_provider.html.erb
@@ -1,3 +1,5 @@
+<% title "Evaluation for #{@evaluation.student_name}" %>
+
 <div class="container">
   <h2>Hello, <%= @evaluation.provider.name %></h2>
 
