--- a/app/views/evaluations/show_student.html.erb
+++ b/app/views/evaluations/show_student.html.erb
@@ -26,8 +26,15 @@
         <%= f.input :hospital, as: :radio, collection: @hospitals %>
         <%= f.input :provider, hint: 'this person will evaluate you' %>
       <% end %>
-      <%= f.actions do %>
-        <%= f.action :submit, label: 'Submit' %>
+      <% if @evaluation.persisted? %>
+        <%= f.actions do %>
+          <%= f.action :submit, label: 'Submit' %>
+        <% end  %>
+      <% else %>
+        <%= f.actions do %>
+          <%= f.action :submit, label: 'Submit', button_html: { disabled: true } %>
+          <%= link_to('Return to admin dashboard', admin_root_path) %>
+        <% end  %>
       <% end %>
     <% end %>
 
