add Student model
admin side is coming together.  still have to fix the non-admin stuff.

TODO:
 - student first and subsequent pages (do redirect for first access, and
   include all details in second access, and in provider form)

--- a/app/views/student_mailer/welcome_email.html.erb
+++ b/app/views/student_mailer/welcome_email.html.erb
@@ -4,9 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-  <h3>Your Sinai Health Systems Student Evaluation is due</h3>
+  <h3>Your Sinai Health Systems student evaluations portal</h3>
   <p>
-  <%= @evaluation.student_name %>, please follow <a href="<%= @url %>">this link</a> to complete your portion of your student evaluation.
+  <%= @student.name %>, the following is your personal link that allows you to request evaluations from SHS providers.
   </p>
   <p>
     <a href="<%= @url %>"><%= @url %></a>
