student "portal" built
 - student workflow is complete
   - student welcome email points to reusable portal URL
   - first visit student must complete their profile, then they can
     request an evaluation
   - subsequent visits they can request an evaluation right away
   - profile can be edited later

TODO:
 - provider evaluations index
 - provider evaluation completion page
 - provider evaluation show page
 - student photo uploader

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,28 @@
  *= require_self
  *= require_tree .
  */
+
+.notice {
+  background-color: #D9EAD3;
+  border: 1px solid #93C47D;
+  padding: 4px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.alert {
+  background-color: #F4CCCC;
+  border: 1px solid #E06666;
+  padding: 4px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+form.compactForm fieldset > ol > li {
+  padding: 2px 10px;
+}
+
+/* fix dumb looking headers */
+h2, h3 {
+  line-height: 1em;
+}
