--- a/app/views/provider_mailer/new_evaluation_email.html.erb
+++ b/app/views/provider_mailer/new_evaluation_email.html.erb
@@ -6,7 +6,7 @@
   <body>
   <h3>You've been asked to complete a Student Evaluation</h3>
   <p>
-  <%= @evaluation.provider.name %>, please follow <a href="<%= @url %>">this link</a> to complete a student evaluation for <%= @evaluation.student_name %>.
+  <%= @evaluation.provider.name %>, please follow <a href="<%= @url %>">this link</a> to complete a student evaluation for <%= @evaluation.student.name %>.
   </p>
   <p>
     <a href="<%= @url %>"><%= @url %></a>
