--- a/app/views/provider_mailer/new_evaluation_email.text.erb
+++ b/app/views/provider_mailer/new_evaluation_email.text.erb
@@ -1,6 +1,6 @@
 You've been asked to complete a Student Evaluation
 ==================================================
 
-<%= @evaluation.provider.name %>, please follow this link to complete a student evaluation for <%= @evaluation.student_name %>:
+<%= @evaluation.provider.name %>, please follow this link to complete a student evaluation for <%= @evaluation.student.name %>:
 
   <%= @url %>
