WIP on demo pages, styling tweaks, dashboard README update

--- a/app/views/providers/home.html.erb
+++ b/app/views/providers/home.html.erb
@@ -1,4 +1,6 @@
-<h2><%= @provider.name %></h2>
+<h2>Sinai Health Systems Student Evaluations</h2>
+
+<h3><%= @provider.name %></h3>
 <hr>
 
 <% if @evaluations.count > 0 %>
