--- a/app/views/providers/edit_evaluation.html.erb
+++ b/app/views/providers/edit_evaluation.html.erb
@@ -1,10 +1,14 @@
 <% title "Evaluation for #{@evaluation.student.name}" %>
 
-<h2><%= @provider.name %></h2>
+<h2>Sinai Health Systems Student Evaluations</h2>
+
+<h3><%= @provider.name %></h3>
 <hr>
 
-<h2>Evaluation for <%= @evaluation.student.name %></h2>
+<h3 style="display:inline-block">Student: <b><%= @evaluation.student.name %></b></h3>
+<div style="float:right">
 <i>requested <%= @evaluation.created_at.to_s(:short) %></i>
+</div>
 
 <%= form_for @evaluation, url: { action: 'submit_evaluation' } do |f| %>
 
