--- a/app/views/providers/edit_evaluation.html.erb
+++ b/app/views/providers/edit_evaluation.html.erb
@@ -5,7 +5,7 @@
 <h3><%= @provider.name %></h3>
 <hr>
 
-<h3 style="display:inline-block">Student: <b><%= @evaluation.student.name %></b></h3>
+<h3 style="display:inline-block">Student: <b><%= @evaluation.student.name %></b> - <%= @evaluation.student.type %></h3>
 <div style="float:right">
 <i>requested <%= @evaluation.created_at.to_s(:short) %></i>
 </div>
