--- a/app/views/students/edit_profile.html.erb
+++ b/app/views/students/edit_profile.html.erb
@@ -1,3 +1,5 @@
+<h2>Sinai Health Systems Student Evaluations</h2>
+
 <%= semantic_form_for @student, url: { action: 'update_profile' } do |f| %>
   <%= f.inputs name: "Edit student profile" do %>
     <%= f.semantic_errors %>
