add a little more explanation to the welcome email

--- a/app/views/student_mailer/welcome_email.html.erb
+++ b/app/views/student_mailer/welcome_email.html.erb
@@ -9,6 +9,9 @@
   <%= @student.name %>, the following is your personal link that allows you to request evaluations from SHS providers.
   </p>
   <p>
+  <b>Please save this email or bookmark the link</b> for the duration of your rotation, because you'll need to use it for all future evaluation requests.
+  </p>
+  <p>
     <a href="<%= @url %>"><%= @url %></a>
   </p>
   </body>
