--- a/app/views/student_mailer/welcome_email.text.erb
+++ b/app/views/student_mailer/welcome_email.text.erb
@@ -3,4 +3,6 @@ Your Sinai Health Systems student evaluations portal
 
 <%= @student.name %>, the following is your personal link that allows you to request evaluations from SHS providers.
 
+Please save this email or bookmark the link for the duration of your rotation, because you'll need to use it for all future evaluation requests.
+
   <%= @url %>
