hastily, made comments required for evaluations
also made things a _little_ more railsy, by using AR::Base#valid? in the
controller, but at the expense of making Evalution#evaluator_update a
little more complex.  anyway, seems like a good trade-off

TODO:
 - Evaluation and EvaluationRequest should really be two different
   models.  that would make the logic more clear and would probably make
   it easier to make the evaluation template more railsy, e.g. maybe we
   could leverage ActiveModel stuff like errors and semantic_form_for.
   also think more about how Rubric fits into the picture, and
   expecially how it will change once we have different rubrics for
   different student types.
 - it's silly to pull `@rubric = @evalution.rubric` in both
   ProvidersController#show_evaluation and #submit_evaluation
 - starting to maybe regret not having tests

--- a/app/views/providers/edit_evaluation.html.erb
+++ b/app/views/providers/edit_evaluation.html.erb
@@ -50,6 +50,9 @@
 
   <div class="comments">
     <%= label(:comments, "Additional Comments:") %>
+    <% if @evaluation.errors[:comments].present? %>
+      <span class="error">required</span>
+    <% end %>
     <br>
     <%= f.text_area(:comments, rows: 6) %>
     <br>
